# splint

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: README.md  clean_search.spl  messy_search.spl  record.sh
examples/: sample.spl
src/splint/: __init__.py  __main__.py  cli.py  config.py  linter.py  models.py  parser.py  reporters.py  rules.py
tests/: test_cli.py  test_linter.py  test_parser.py  test_reporters.py  test_rules.py
